# pyxelate

./: .gitignore  CHANGELOG.md  README.md  UPDATE.md  main.py  pyproject.toml  regenerate_examples.py
.github/workflows/: ci.yml  release.yml
pyxelate/: __init__.py  backend.py  main.py  pyx.py  vid.py
tests/: __init__.py  test_pal.py  test_postprocess.py  test_pyx.py
